--- a/style.css
+++ b/style.css
@@ -37,10 +37,15 @@ a {
 
 .main {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;    
     gap: 20px;
-    padding-top: 130px;
+    height: 80vh;
+}
+
+.container {
+    display: block;
+    margin-left: 95px;
 }
 
 .main-image {
@@ -51,22 +56,120 @@ a {
 .COD-logo {
     width: 350px;
     height: 120px;
-    padding-top: 90px;
+    margin-right: 95px;
 }
 
 .main-text {
-    display: block;
-
     font-size: 18px;
     color: #e5e7eb;
+    width: 500px;
+    margin-top: 8px;
 }
 
 button {
     background-color: #3882f6;
+    border-radius: 10px;
+    color:#ffffff;
+    margin-top: 12px;
+    height: 40px;
+    width: 130px;
+    font-weight: bold;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.information {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 36px;
+    color: #1f2937;
+    margin-top: 50px;
+}
+
+.game-selection {
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.title {
+    height: 80px;
+    width: 150px;
+}
+
+.title-name {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+}
+
+.quote {
+    margin-top: 150px;
+    padding: 140px;
+    font-size: 36px;
+    color: #1f2937;
+    font-style: italic;
+    text-align: center;
+    background-color:#e5e7eb;
+    padding-bottom: 140px;
+}
+
+p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 24px;
+    color: #1f2937;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 0;
+    font-style: normal;
+}
+
+.CTA {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #3882f6;
+    margin: 120px 200px;
+    padding: 50px 90px;
+    border-radius: 10px;
+}
+
+.CTA-container {
+    margin-top: 20px;
+}
+
+.call-text {
+    color: #ffffff;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    width: 500px;
+
+}
+
+p.sign-up-text {
+    font-size: medium;
+    font-weight: 100;
+    display: block;
+    color: #ffffff;
+}
+
+.CTA-button {
+    border: 3px solid rgb(255, 255, 255);
 }
 
 .footer {
     background-color: #1f2937;
     color: #ffffff;
     text-align: center;
+    padding-top: 52px;
+    padding-bottom: 60px;
+    font-size: 20px;
 }
